2009-07-13  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* statistics.tcl: Implement more robust computation of basic statistics
	      Fixes bug 2812832; simplified the code (as indicated by akupries)
	* statistics.test: Added test for this more robust computation
	* linalg.tcl: Corrected dim and shape procedures for scalars (version now 1.1.3;
	      Fixes bug 2818958
	* linalg.test: Corrected result of dim and shape procedures for scalars
	* pkgIndex.tcl: Updated version numbers

2009-03-20  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* linalg.tcl: Solving bugs with test matrices (bugs #2695513, 2695564, 2695618)
	* linalg.test: Added test cases for border matrix and Wilkinson W- and W+
	* pkgIndex.tcl: Version of linear algebra package increased to 1.1.1

2009-02-18  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* machineparameters.man: Replaced deprecated markup (bug #2597454)

2009-02-06  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* pkgIndex.tcl: Added machineparameters package
	* machineparameters.tcl: New package by Michael Baudin
	* machineparameters.test: Test for the new package
	* machineparameters.man: Man page for the new package

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	*

2008-12-01  Andreas Kupries  <andreask@activestate.com>

	* linalg.man: New commands in last checkin means extended API.
	* linalg.tcl: Bumping minor version, to 1.1.
	* pkgIndex.tcl:

2008-12-01  Arjen Markus <arjenmarkus@users.sourceforge.net>

	* linalg.man: changed int to integer, documented new procedures by Michael Baudin
	* linalg.test: incorporated new tests by Michael Baudin
	* linalg.tcl: incorporated new procedures, extensions and several bug fixes by Michael Baudin

2008-11-09  Arjen Markus <arjenmarkus@users.sourceforge.net>

	* optimize.man: corrected names of minimum and maximum procedures
