@@ -1,3 +1,6 @@
+2009-08-12  Arjen Markus <arjenmarkus@users.sourceforge.net>
+	* statistics.tcl: Solve bug 2835712 regarding interval-mean-stdev
+
 2009-07-13  Arjen Markus <arjenmarkus@users.sourceforge.net>
 	* statistics.tcl: Implement more robust computation of basic statistics
 	      Fixes bug 2812832; simplified the code (as indicated by akupries)
